@@ -1,24 +1,16 @@
 package ua.com.fielden.web.domain_driven.authetication;
 
-import static java.lang.String.format;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-
-import java.security.SignatureException;
-import java.util.Optional;
-
 import org.junit.After;
+import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.Test;
 import org.restlet.Client;
+import org.restlet.Context;
 import org.restlet.Request;
 import org.restlet.Response;
 import org.restlet.data.CookieSetting;
 import org.restlet.data.Method;
 import org.restlet.data.Protocol;
-
 import ua.com.fielden.platform.sample.domain.TgPerson;
 import ua.com.fielden.platform.security.session.Authenticator;
 import ua.com.fielden.platform.security.session.UserSession;
@@ -32,20 +24,25 @@ import ua.com.fielden.platform.utils.IUniversalConstants;
 import ua.com.fielden.platform.web.security.AbstractWebResourceGuard;
 import ua.com.fielden.platform.web.test.TestWebApplication;
 
-/**
- * A test case to ensure correct HTTP responses (HTTP codes and cookies) to requests for accessing guarded web resources.
- *
- * @author TG Team
- *
- */
+import java.security.SignatureException;
+import java.util.Optional;
+
+import static org.junit.Assert.*;
+
+/// A test case to ensure correct HTTP responses (HTTP codes and cookies) to requests for accessing guarded web resources.
+///
 public class WebResourceGuardTestCase extends AbstractDaoTestCase {
 
-    private final UserSessionDao coSession = (UserSessionDao) co$(UserSession.class);
+    private final UserSessionDao coSession = co$(UserSession.class);
     private final UniversalConstantsForTesting constants = (UniversalConstantsForTesting) getInstance(IUniversalConstants.class);
     private final WebResourceGuardTestWebApplication webApp = getInstance(WebResourceGuardTestWebApplication.class);
-    private final String baseUri = format("http://localhost:%s/v1", TestWebApplication.PORT);
-    private final Client client = new Client(Protocol.HTTP);
-    private IUser coUser = co$(User.class);
+    private final String baseUri = "http://localhost:%s/v1".formatted(TestWebApplication.PORT);
+    private final Client client = new Client(new Context(), Protocol.HTTP);
+    {
+        // Redirects should not be followed, which became the default and needs to be turned off for testing.
+        client.getContext().getParameters().add("followRedirects", "false");
+    }
+    private final IUser coUser = co$(User.class);
 
     @Before
     public void startUp() {
@@ -61,7 +58,7 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
 
     @Test
     public void unauthenticated_POST_request_should_be_refused_with_code_403_forbidden() throws SignatureException {
-        final Request request = new Request(Method.POST, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.POST, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final Response response = client.handle(request);
 
         assertEquals(403, response.getStatus().getCode());
@@ -69,7 +66,7 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
 
     @Test
     public void unauthenticated_PUT_request_should_be_refused_with_code_403_forbidden() throws SignatureException {
-        final Request request = new Request(Method.POST, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.POST, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final Response response = client.handle(request);
 
         assertEquals(403, response.getStatus().getCode());
@@ -77,7 +74,7 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
 
     @Test
     public void unauthenticated_GET_request_should_be_redirected() throws SignatureException {
-        final Request request = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final Response response = client.handle(request);
 
         assertEquals(307, response.getStatus().getCode());
@@ -89,9 +86,9 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, true, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
-        final Request request = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, currUser.getKey(), TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, currUser.getKey(), TgPerson.class.getSimpleName(), 12L));
         final CookieSetting newCookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         newCookie.setAccessRestricted(true);
         request.getCookies().add(newCookie);
@@ -107,9 +104,9 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, true, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
-        final Request request = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting newCookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         newCookie.setAccessRestricted(true);
         request.getCookies().add(newCookie);
@@ -129,18 +126,18 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, true, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
         // some time passes by sufficient to evict authenticators from cache
         // the authenticator is still valid, but not in cache, which should lead to its regeneration
         // meanwhile, requests that followed the first one triggering re-authentication, should also be accepted...
         constants.setNow(dateTime("2015-04-23 18:26:00"));
-        final Request request1 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request1 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting cookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         cookie.setAccessRestricted(true);
         request1.getCookies().add(cookie);
 
-        final Request request2 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request2 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         request2.getCookies().add(cookie);
 
         final Response response1 = client.handle(request1);
@@ -167,18 +164,18 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, false, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
         // some time passes by sufficient to evict authenticators from cache, but insufficient to invalidate the original authenticator from an untrusted device
         // therefore, the authenticator is still valid, but not in cache, which should lead to its regeneration
         // meanwhile, requests that followed the first one triggering re-authentication, should also be accepted...
         constants.setNow(dateTime("2015-04-23 17:30:00"));
-        final Request request1 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request1 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting cookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         cookie.setAccessRestricted(true);
         request1.getCookies().add(cookie);
 
-        final Request request2 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request2 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         request2.getCookies().add(cookie);
 
         final Response response1 = client.handle(request1);
@@ -206,11 +203,11 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, false, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
         // sufficient time passes by to invalidate the authenticator
         constants.setNow(dateTime("2015-04-23 17:33:00"));
-        final Request request = new Request(Method.POST, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.POST, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting newCookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         newCookie.setAccessRestricted(true);
         request.getCookies().add(newCookie);
@@ -226,11 +223,11 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         // establish a new session
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, false, null);
-        final String authenticator = session.getAuthenticator().get().toString();
+        final String authenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
         // sufficient time passes by to invalidate the authenticator
         constants.setNow(dateTime("2015-04-23 17:33:00"));
-        final Request request = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting newCookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, authenticator, "/", null);
         newCookie.setAccessRestricted(true);
         request.getCookies().add(newCookie);
@@ -243,21 +240,21 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
     @Test
     public void stolen_authenticator_from_trusted_device_should_be_recognised() {
         constants.setNow(dateTime("2015-04-23 17:26:00"));
-        // establish a new session
+        // Establish a new session.
         final User currUser = getInstance(IUserProvider.class).getUser();
         final UserSession session = coSession.newSession(currUser, true, null);
-        final String stolenAuthenticator = session.getAuthenticator().get().toString();
+        final String stolenAuthenticator = session.getAuthenticator().map(Authenticator::toString).orElseThrow();
 
-        // an authenticator gets stolen and used by an adversary after sufficiently long time to evict authenticators from cache has passed
-        // the authenticator is still valid, but not in cache, which should lead to its regeneration
-        // any subsequent requests with the stolen authenticator post the eviction time after regeneration should lead to a recognition of that authenticator as invalid
+        // An authenticator gets stolen and used by an adversary after a sufficiently long time to evict authenticators from cache has passed.
+        // The authenticator is still valid, but not in cache, which should lead to its regeneration.
+        // Any subsequent requests with the stolen authenticator post the eviction time after regeneration should lead to a recognition of that authenticator as invalid
         constants.setNow(dateTime("2015-04-23 18:26:00"));
-        final Request request1 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request1 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting cookie = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, stolenAuthenticator, "/", null);
         cookie.setAccessRestricted(true);
         request1.getCookies().add(cookie);
 
-        // request by a user
+        // Request by a user.
         final Response response1 = client.handle(request1);
         assertEquals(200, response1.getStatus().getCode());
         final CookieSetting returnedCookie1 = response1.getCookieSettings().getFirst(AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME);
@@ -268,12 +265,12 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
 
         // request by an adversary with the stolen authenticator
         constants.setNow(dateTime("2015-04-23 18:40:00"));
-        final Request request2 = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request2 = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         request2.getCookies().add(cookie);
         final Response response2 = client.handle(request2);
         assertEquals(307, response2.getStatus().getCode());
         assertEquals(1, response2.getCookieSettings().size());
-        final CookieSetting authCookie = response2.getCookieSettings().get(0);
+        final CookieSetting authCookie = response2.getCookieSettings().getFirst();
         assertEquals("", authCookie.getValue());
         assertEquals(0, authCookie.getMaxAge());
     }
@@ -283,13 +280,13 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         constants.setNow(dateTime("2015-04-23 17:26:00"));
         final User currUser = getInstance(IUserProvider.class).getUser();
 
-        // establish generate two authenticators with the second authenticator having a greater expiration time
+        // generate two authenticators with the second authenticator having a greater expiration time
         final Authenticator auth1 = coSession.mkAuthenticator(currUser, coSession.genSeriesId(), 1L, dateTime("2015-04-23 19:00:01").toDate());
         final Authenticator auth2 = coSession.mkAuthenticator(currUser, coSession.genSeriesId(), 2L, dateTime("2015-04-23 19:00:00").toDate());
         final String strAuth1 = auth1.toString();
         final String strAuth2 = auth2.toString();
 
-        final Request request = new Request(Method.GET, format("%s/users/%s/%s/%s", baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
+        final Request request = new Request(Method.GET, "%s/users/%s/%s/%s".formatted(baseUri, User.system_users.UNIT_TEST_USER, TgPerson.class.getSimpleName(), 12L));
         final CookieSetting cookie1 = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, strAuth1, "/", null);
         cookie1.setAccessRestricted(true);
         final CookieSetting cookie2 = new CookieSetting(1, AbstractWebResourceGuard.AUTHENTICATOR_COOKIE_NAME, strAuth2, "/", null);
@@ -299,6 +296,7 @@ public class WebResourceGuardTestCase extends AbstractDaoTestCase {
         request.getCookies().add(cookie2);
 
         final Optional<Authenticator> auth = AbstractWebResourceGuard.extractAuthenticator(request);
-        assertEquals(strAuth2, auth.get().toString());
+        assertEquals(strAuth2, auth.map(Authenticator::toString).orElseThrow());
     }
+
 }
